// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hexagon component should render properly with proper values provided 1`] = `
<div
  className="hexagon"
  data-value={2}
  data-x={1}
  data-y={1}
  data-z={1}
>
  2
</div>
`;

exports[`Hexagon component should render properly without props 1`] = `
<div
  className="hexagon"
>
  
</div>
`;
